--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap');
         </style>
-        <title>ChaosBay</title>
+        <link rel="icon" href="assets/favicon.png" type="image/x-icon" />
+        <link rel="stylesheet" href="custom.css" />
+        <title>Chaosbay</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
