--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
             content="Web site created using create-react-app"
         />
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+            @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
         </style>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap');
+            @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap");
         </style>
         <link rel="icon" href="assets/favicon.png" type="image/x-icon" />
         <link rel="stylesheet" href="custom.css" />
@@ -20,6 +20,11 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+        <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+            <input type="text" name="name" />
+            <input type="email" name="email" />
+            <textarea name="message"></textarea>
+        </form>
         <div id="root"></div>
     </body>
 </html>
