--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <form name="contact" netlify netlify-honeypot="bot-field" hidden>
             <input type="text" name="name" />
-            <input type="email" name="email" />
+            <input type="text" name="email" />
             <textarea name="message"></textarea>
         </form>
         <div id="root"></div>
